--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Triptrip</string>
+    <string name="app_name">Trip Trip</string>
     <string name="txt_log_out">Log out</string>
     <string name="action_login">Log in</string>
     <string name="txt_register">Register</string>
@@ -24,4 +24,12 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Huy Nguyen</string>
+    <string name="nav_header_subtitle">huynguyen@triptrip.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="ic_triptrip">TripTrip</string>
 </resources>
